finalization of static website

--- a/about.html
+++ b/about.html
@@ -25,10 +25,11 @@
   </script>
 </head>
 
-<body class="bg-gray-50 text-gray-800 border-4 border-solid border-red-500">
+<body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen">
+
 
   <!-- Header -->
-  <header class="bg-white shadow p-4 border-4 border-solid border-green-500">
+  <header class="bg-white shadow p-4">
     <div class="max-w-7xl mx-auto flex items-center justify-between gap-4 flex-wrap">
 
       <!-- Logo -->
@@ -57,7 +58,8 @@
   </header>
 
   <!-- Main Content -->
-  <main class="p-8 max-w-4xl mx-auto">
+  <main class="p-8 max-w-4xl mx-auto flex-grow">
+
     <section class="text-center mb-12">
       <h2 class="text-3xl font-semibold mb-4 text-handyman">About Us</h2>
       <p class="text-md max-w-2xl mx-auto">
@@ -73,11 +75,15 @@
     </section>
 
     <section class="text-center">
-      <h3 class="text-xl font-bold mb-2 text-handyman">Meet the Owner</h3>
-      <p class="text-md max-w-2xl mx-auto">
-        Daniel Herrera brings over a decade of hands-on experience in residential and commercial repair. From electrical to drywall, Daniel's dedication to excellence and genuine care for clients is what makes this service stand out.
-      </p>
-    </section>
+        <h3 class="text-xl font-bold mb-2 text-handyman">Meet the Owners</h3>
+        <p class="text-md max-w-2xl mx-auto">
+          Miguel Herrera brings over 25 years of hands-on experience in residential and commercial repair. From electrical work to drywall, Miguel’s commitment to excellence and genuine care for clients is what makes this service stand out.
+        </p>
+        <p class="text-md max-w-2xl mx-auto mt-4">
+          His wife, Margarita Herrera, serves as co-owner and assistant. She manages business calls, schedules, and ensures every client receives prompt and professional communication throughout the project.
+        </p>
+      </section>
+      
   </main>
 
   <!-- Footer -->
